# emtl

./: .gitignore  CHANGELOG.rst  README.md  abbrs.json  pyproject.toml
examples/emapi/: get_last_price.json  query_asset_and_position.json  query_funds_flow.json  query_history_orders.json  query_history_trades.json  query_orders.json  query_trades.json
src/emtl/: __init__.py  client.py  client_manager.py  const.py  core.py  error.py  serializer.py  utils.py
src/emtl/tests/: test_client.py
